--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
         //Tao_container 最小高度
         var clientHeight = document.documentElement.clientHeight;
         var Tao_container = document.getElementsByClassName("tao_container")[0];
-        Tao_container.style.minHeight = (clientHeight -65.19)+ "px";
+        Tao_container.style.height = (clientHeight)+ "px";
   })();  
 </script>  
 </html>
